--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "mazin",
+  "keywords": ["easy","start","freecodecamp"],
 	"description": "a project to leaen backend concepts",
+  "license": "MIT",
+  "version":"1.1",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
